# contract-coding-framework

./: .claude.md  README.md  api.contract.yaml  cyclic.contract.yaml  main.py  pyproject.toml  run_benchmark.py  test_heg.py
benchmarks/greenfield5/contracts/: ForbiddenEdge.yaml  Independent.yaml  MissingEdge.yaml  SimpleAPI.yaml  Triangle.yaml
benchmarks/greenfield5/mock_code/ForbiddenEdge/: main.py
benchmarks/greenfield5/mock_code/Independent/: main.py
benchmarks/greenfield5/mock_code/MissingEdge/: main.py
benchmarks/greenfield5/mock_code/SimpleAPI/: main.py
benchmarks/greenfield5/mock_code/Triangle/: main.py
benchmarks/live_subagent/: contract.yaml
benchmarks/live_subagent/src/: main.py
contract_coding/: __init__.py  cli.py
contract_coding/audit/: signatures.py  structural.py
contract_coding/core/: __init__.py  contract.py  parser.py  schema.py  validator.py
contract_coding/graph/: heg.py  refactor.py
contract_coding/schema/: contract.py  packet.py  parser.py
tests/: test_graph.py  test_schema.py
