[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contract-coding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "typer>=0.26.7",
]

[project.scripts]
contract-coder = "contract_coding.cli:main"
